--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <!-- --------------- Header --------------- -->
         <header class="header">
-            <div class="container">
+            <div class="header__container">
                 <div class="header__inner">
                     <a class="header__logo"
                        href="#">
@@ -24,35 +24,38 @@
                     <!-- ------------- Navigation ------------- -->
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__list-item">
-                                <a href=""
-                                   class="menu__list-link">О НАС<a>
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">О НАС
+                                </a>
                             </li>
 
-                            <li class="menu__list-item">
-                                <a href=""
-                                   class="menu__list-link">АВТОПАРК</a>
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">АВТОПАРК</a>
                             </li>
 
-                            <li class="menu__list-item">
-                                <a href=""
-                                   class="menu__list-link">ОТЗЫВЫ</a>
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">ОТЗЫВЫ</a>
                             </li>
 
-                            <li class="menu__list-item">
-                                <a href=""
-                                   class="menu__list-link">КОНТАКТЫ</a>
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">КОНТАКТЫ</a>
                             </li>
 
-                            <li class="menu__list-item">
-                                <a href=""
-                                   class="menu__list-link">УСЛОВИЯ</a>
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">УСЛОВИЯ</a>
                             </li>
                         </ul>
                     </nav>
                     <!-- ------------- Navigation ------------- -->
-                    <a class="header__number"
-                       href="tel:+38 (099) 999 90 90">+38 (099) 999 90 90</a>
+                    <a class="phone"
+                       href="tel:+38 (099) 999 90 90">
+                        +38 (099) 999 90 90
+                    </a>
                 </div>
             </div>
         </header>
@@ -60,7 +63,118 @@
 
         <!-- --------------- Main --------------- -->
         <main class="main">
-
+            <!-- ------------- Section Top ------------- -->
+            <section class="main__section">
+                <div class="main__section__container">
+                    <!-- -------- Content -------- -->
+                    <div class="main__content">
+                        <h1 class="main__content-title">
+                            Каршеринг в Киеве LUX автомобили
+                        </h1>
+                        <p class="main__content-text">
+                            Закажи эксклюзивный автомобиль через мобильное приложение в любой точке города</p>
+                        <a class="app-link"
+                           href="#">Скачать приложение</a>
+                        <!-- ---------------- -->
+                        <div class="main__content-items">
+                            <div class="main__content-item">
+                                <img class="content-item__img"
+                                     src="images/icon-1.svg"
+                                     alt="">
+                                <p class="content-item__text">
+                                    Более 300 автомобилей
+                                    в вашем распоряжении</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__content-item">
+                                <img class="content-item__img"
+                                     src="images/icon-2.svg"
+                                     alt="">
+                                <p class="content-item__text">
+                                    Дешевле такси
+                                    и собственного автомобиля</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__content-item">
+                                <img class="content-item__img"
+                                     src="images/icon-3.svg"
+                                     alt="">
+                                <p class="content-item__text">
+                                    Лучшие автомобили
+                                    в любой точке города</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- -------- Content -------- -->
+                    <!-- -------- Slider -------- -->
+                    <div class="main__slider">
+                        <div class="main__slider-items">
+                            <div class="main__slider-item">
+                                <div class="main__slider-images">
+                                    <img src="images/slider-img.png"
+                                         alt="">
+                                </div>
+                                <p class="main__slider-text">
+                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__slider-item">
+                                <div class="main__slider-images">
+                                    <img src="images/slider-img.png"
+                                         alt="">
+                                </div>
+                                <p class="main__slider-text">
+                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__slider-item">
+                                <div class="main__slider-images">
+                                    <img src="images/slider-img.png"
+                                         alt="">
+                                </div>
+                                <p class="main__slider-text">
+                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__slider-item">
+                                <div class="main__slider-images">
+                                    <img src="images/slider-img.png"
+                                         alt="">
+                                </div>
+                                <p class="main__slider-text">
+                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__slider-item">
+                                <div class="main__slider-images">
+                                    <img src="images/slider-img.png"
+                                         alt="">
+                                </div>
+                                <p class="main__slider-text">
+                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
+                            </div>
+                            <!-- ---------------- -->
+                            <div class="main__slider-item">
+                                <div class="main__slider-images">
+                                    <img src="images/slider-img.png"
+                                         alt="">
+                                </div>
+                                <p class="main__slider-text">
+                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
+                            </div>
+                        </div>
+                        <!-- ---------------- -->
+                        <div class="main__slider-links">
+                            <a class="main__slider-link"
+                               href="">Условия аренды автомобиля</a>
+                            <a class="main__slider-link"
+                               href="">Публичный договор</a>
+                        </div>
+                    </div>
+                    <!-- -------- Slider -------- -->
+                </div>
+            </section>
+            <!-- ------------- Section Top ------------- -->
         </main>
         <!-- --------------- Main --------------- -->
 
