Added Main slider

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Car Sharing</title>
+
     <link rel="stylesheet"
           href="css/style.css">
 </head>
@@ -108,69 +109,53 @@
                     <!-- -------- Content -------- -->
                     <!-- -------- Slider -------- -->
                     <div class="main__slider">
-                        <div class="main__slider-items">
-                            <div class="main__slider-item">
-                                <div class="main__slider-images">
+                        <div class="main__slider-container">
+                            <div class="slides">
+                                <div class="slide">
                                     <img src="images/slider-img.png"
-                                         alt="">
+                                         alt="Slide">
+                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
-                                <p class="main__slider-text">
-                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
-                            </div>
-                            <!-- ---------------- -->
-                            <div class="main__slider-item">
-                                <div class="main__slider-images">
+
+                                <div class="slide">
                                     <img src="images/slider-img.png"
-                                         alt="">
+                                         alt="Slide">
+                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
-                                <p class="main__slider-text">
-                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
-                            </div>
-                            <!-- ---------------- -->
-                            <div class="main__slider-item">
-                                <div class="main__slider-images">
+
+                                <div class="slide">
                                     <img src="images/slider-img.png"
-                                         alt="">
+                                         alt="Slide">
+                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
-                                <p class="main__slider-text">
-                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
-                            </div>
-                            <!-- ---------------- -->
-                            <div class="main__slider-item">
-                                <div class="main__slider-images">
+
+                                <div class="slide">
                                     <img src="images/slider-img.png"
-                                         alt="">
+                                         alt="Slide">
+                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
-                                <p class="main__slider-text">
-                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
-                            </div>
-                            <!-- ---------------- -->
-                            <div class="main__slider-item">
-                                <div class="main__slider-images">
+
+                                <div class="slide">
                                     <img src="images/slider-img.png"
-                                         alt="">
+                                         alt="Slide">
+                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
-                                <p class="main__slider-text">
-                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
-                            </div>
-                            <!-- ---------------- -->
-                            <div class="main__slider-item">
-                                <div class="main__slider-images">
+
+                                <div class="slide">
                                     <img src="images/slider-img.png"
-                                         alt="">
+                                         alt="Slide">
+                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
-                                <p class="main__slider-text">
-                                    4 грн/мин 5 мест 50 тыс. км пробег</p>
                             </div>
+
+                            <div class="pagination"></div>
                         </div>
-                        <!-- ---------------- -->
-                        <div class="main__slider-links">
-                            <a class="main__slider-link"
-                               href="">Условия аренды автомобиля</a>
-                            <a class="main__slider-link"
-                               href="">Публичный договор</a>
+                        <div class="copyright">
+                            <p>Условия аренды автомобиля</p>
+                            <p>Публичный договор</p>
                         </div>
                     </div>
+
                     <!-- -------- Slider -------- -->
                 </div>
             </section>
@@ -186,6 +171,8 @@
         </footer>
         <!-- --------------- Footer --------------- -->
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
