Changes in SCSS and main content

--- a/index.html
+++ b/index.html
@@ -114,45 +114,45 @@
                                 <div class="slide">
                                     <img src="images/slider-img.png"
                                          alt="Slide">
-                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
+                                    <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
                                     <img src="images/slider-img.png"
                                          alt="Slide">
-                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
+                                    <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
                                     <img src="images/slider-img.png"
                                          alt="Slide">
-                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
+                                    <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
                                     <img src="images/slider-img.png"
                                          alt="Slide">
-                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
+                                    <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
                                     <img src="images/slider-img.png"
                                          alt="Slide">
-                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
+                                    <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
                                     <img src="images/slider-img.png"
                                          alt="Slide">
-                                    <p>5 грн/мин 5 мест 50 тыс. км пробег</p>
+                                    <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
                             </div>
 
                             <div class="pagination"></div>
                         </div>
                         <div class="copyright">
-                            <p>Условия аренды автомобиля</p>
-                            <p>Публичный договор</p>
+                            <a href="#">Условия аренды автомобиля</a>
+                            <a href="#">Публичный договор</a>
                         </div>
                     </div>
 
