--- a/index.html
+++ b/index.html
@@ -112,37 +112,43 @@
                         <div class="main__slider-container">
                             <div class="slides">
                                 <div class="slide">
-                                    <img src="images/slider-img.png"
+                                    <img class="slide__img"
+                                         src="images/slider-img.png"
                                          alt="Slide">
                                     <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
-                                    <img src="images/slider-img.png"
+                                    <img class="slide__img"
+                                         src="images/slider-img.png"
                                          alt="Slide">
                                     <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
-                                    <img src="images/slider-img.png"
+                                    <img class="slide__img"
+                                         src="images/slider-img.png"
                                          alt="Slide">
                                     <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
-                                    <img src="images/slider-img.png"
+                                    <img class="slide__img"
+                                         src="images/slider-img.png"
                                          alt="Slide">
                                     <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
-                                    <img src="images/slider-img.png"
+                                    <img class="slide__img"
+                                         src="images/slider-img.png"
                                          alt="Slide">
                                     <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
 
                                 <div class="slide">
-                                    <img src="images/slider-img.png"
+                                    <img class="slide__img"
+                                         src="images/slider-img.png"
                                          alt="Slide">
                                     <p class="slide__text">5 грн/мин 5 мест 50 тыс. км пробег</p>
                                 </div>
@@ -150,9 +156,12 @@
 
                             <div class="pagination"></div>
                         </div>
-                        <div class="copyright">
-                            <a href="#">Условия аренды автомобиля</a>
-                            <a href="#">Публичный договор</a>
+
+                        <div class="copy__items">
+                            <a class="copy__link"
+                               href="#">Условия аренды автомобиля</a>
+                            <a class="copy__link"
+                               href="#">Публичный договор</a>
                         </div>
                     </div>
 
@@ -160,13 +169,96 @@
                 </div>
             </section>
             <!-- ------------- Section Top ------------- -->
+
+            <!-- ------------- Section Conditions ------------- -->
+            <section class="rent">
+                <div class="rent__container">
+                    <div class="rent__inner">
+                        <div class="rent__content">
+                            <h3 class="rent__title">
+                                Условия аренды автомобиля</h3>
+                            <p class="rent__text">
+                                Мы ценим каждого клиента и предоставляем качественный сервис каршеринга в Киеве.
+                            </p>
+                            <p class="rent__text">
+                                Именно для того, что бы Вам было приятно и безопасно пользоваться нашим сервисом на
+                                постоянной основе, мы выделили
+                                несколько условий для того, чтобы взять машину в аренду
+                            </p>
+                            <a class="app-link"
+                               href="#">Скачать приложение</a>
+                        </div>
+                        <div class="rent__item"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- ------------- Section Conditions ------------- -->
         </main>
         <!-- --------------- Main --------------- -->
 
         <!-- --------------- Footer --------------- -->
         <footer class="footer">
-            <div class="container">
-                <div class="footer__inner"></div>
+            <div class="footer__container">
+                <div class="footer__inner">
+                    <a class="app-link"
+                       href="#">Скачать приложение</a>
+                    <!-- ------------- Navigation ------------- -->
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">О НАС
+                                </a>
+                            </li>
+
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">АВТОПАРК</a>
+                            </li>
+
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">ОТЗЫВЫ</a>
+                            </li>
+
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">КОНТАКТЫ</a>
+                            </li>
+
+                            <li class="menu__item">
+                                <a class="menu__list-link"
+                                   href="#">УСЛОВИЯ</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- ------------- Navigation ------------- -->
+                    <a class="phone"
+                       href="tel:+38 (099) 999 90 90">
+                        +38 (099) 999 90 90
+                    </a>
+                </div>
+                <!-- ---------------- -->
+                <ul class="social__link-items">
+                    <li class="social__item">
+                        <a href="#">
+                            <img src="images/footer/facebook.svg"
+                                 alt="Facebook">
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#">
+                            <img src="images/footer/instagram.svg"
+                                 alt="Instagram">
+                        </a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#">
+                            <img src="images/footer/youtube.svg"
+                                 alt="Youtube">
+                        </a>
+                    </li>
+                </ul>
             </div>
         </footer>
         <!-- --------------- Footer --------------- -->
