--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                         <div class="rent__content">
                             <h3 class="rent__title">
                                 Условия аренды автомобиля</h3>
-                            <p class="rent__text">
+                            <p>
                                 Мы ценим каждого клиента и предоставляем качественный сервис каршеринга в Киеве.
                             </p>
-                            <p class="rent__text">
+                            <p>
                                 Именно для того, что бы Вам было приятно и безопасно пользоваться нашим сервисом на
                                 постоянной основе, мы выделили
                                 несколько условий для того, чтобы взять машину в аренду
@@ -188,7 +188,43 @@
                             <a class="app-link"
                                href="#">Скачать приложение</a>
                         </div>
-                        <div class="rent__item"></div>
+
+                        <div class="rent__items">
+                            <div class="rent__item">
+                                <div class="rent__item-numb">01</div>
+                                <p class="rent__item-title">
+                                    Опыт вождения от 2х лет
+                                </p>
+                                <p class="rent__item-text">
+                                    Для того, чтобы арендовать автомобиль, Вам необходимо зарегестрировать свои прав в
+                                    нашем
+                                    мобильном приложении
+                                </p>
+                            </div>
+
+                            <div class="rent__item">
+                                <div class="rent__item-numb">02</div>
+                                <p class="rent__item-title">
+                                    Только по Киеву
+                                </p>
+                                <p class="rent__item-text">
+                                    Наши автомобили работают только в пределах города
+                                    Киев. За город на наших автомобилях, к сожалению,выезжать нельзя.
+                                </p>
+                            </div>
+
+                            <div class="rent__item">
+                                <div class="rent__item-numb">03</div>
+                                <p class="rent__item-title">
+                                    Мобильный телефон и интернет
+                                </p>
+                                <p class="rent__item-text">
+                                    Для использования нашего сервиса Вам необходим мобильный телефон и
+                                    интернет.Бронирование, оплата и вся отчетность происходит онлайн
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
