--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- --------------- Main --------------- -->
         <main class="main">
-            <!-- ------------- Section Top ------------- -->
+            <!-- ------------- Main Section ------------- -->
             <section class="main__section">
                 <div class="main__section__container">
                     <!-- -------- Content -------- -->
@@ -168,67 +168,117 @@
                     <!-- -------- Slider -------- -->
                 </div>
             </section>
-            <!-- ------------- Section Top ------------- -->
+            <!-- ------------- Main Section ------------- -->
 
-            <!-- ------------- Section Conditions ------------- -->
+            <!-- ------------- Section Rent ------------- -->
             <section class="rent">
                 <div class="rent__container">
                     <div class="rent__inner">
                         <div class="rent__content">
                             <h3 class="rent__title">
                                 Условия аренды автомобиля</h3>
-                            <p>
+                            <p class="rent__text">
                                 Мы ценим каждого клиента и предоставляем качественный сервис каршеринга в Киеве.
                             </p>
-                            <p>
+                            <p class="rent__text">
                                 Именно для того, что бы Вам было приятно и безопасно пользоваться нашим сервисом на
                                 постоянной основе, мы выделили
                                 несколько условий для того, чтобы взять машину в аренду
                             </p>
-                            <a class="app-link"
+                            <a class="app-link rent__content-link"
                                href="#">Скачать приложение</a>
                         </div>
 
-                        <div class="rent__items">
-                            <div class="rent__item">
-                                <div class="rent__item-numb">01</div>
-                                <p class="rent__item-title">
-                                    Опыт вождения от 2х лет
-                                </p>
-                                <p class="rent__item-text">
-                                    Для того, чтобы арендовать автомобиль, Вам необходимо зарегестрировать свои прав в
-                                    нашем
-                                    мобильном приложении
-                                </p>
-                            </div>
+                        <div class="rent__item">
+                            <div class="rent__item-numb">01</div>
+                            <p class="rent__item-title">
+                                Опыт вождения <br>
+                                от 2х лет
+                            </p>
+                            <p class="rent__item-text">
+                                Для того, чтобы арендовать автомобиль, Вам необходимо зарегестрировать свои прав в
+                                нашем
+                                мобильном приложении
+                            </p>
+                        </div>
 
-                            <div class="rent__item">
-                                <div class="rent__item-numb">02</div>
-                                <p class="rent__item-title">
-                                    Только по Киеву
-                                </p>
-                                <p class="rent__item-text">
-                                    Наши автомобили работают только в пределах города
-                                    Киев. За город на наших автомобилях, к сожалению,выезжать нельзя.
-                                </p>
-                            </div>
+                        <div class="rent__item">
+                            <div class="rent__item-numb">02</div>
+                            <p class="rent__item-title">
+                                Только по Киеву
+                            </p>
+                            <p class="rent__item-text">
+                                Наши автомобили работают только в пределах города
+                                Киев. За город на наших автомобилях, к сожалению,выезжать нельзя.
+                            </p>
+                        </div>
 
-                            <div class="rent__item">
-                                <div class="rent__item-numb">03</div>
-                                <p class="rent__item-title">
-                                    Мобильный телефон и интернет
-                                </p>
-                                <p class="rent__item-text">
-                                    Для использования нашего сервиса Вам необходим мобильный телефон и
-                                    интернет.Бронирование, оплата и вся отчетность происходит онлайн
-                                </p>
-                            </div>
+                        <div class="rent__item">
+                            <div class="rent__item-numb">03</div>
+                            <p class="rent__item-title">
+                                Мобильный телефон и интернет
+                            </p>
+                            <p class="rent__item-text">
+                                Для использования нашего сервиса Вам необходим мобильный телефон и
+                                интернет.Бронирование, оплата и вся отчетность происходит онлайн
+                            </p>
                         </div>
 
                     </div>
                 </div>
             </section>
-            <!-- ------------- Section Conditions ------------- -->
+            <!-- ------------- Section Rent ------------- -->
+
+            <!-- ------------- Section Advantages ------------- -->
+            <section class="benefits">
+                <div class="benefits__container">
+                    <h3 class="benefits__title">Преимущества</h3>
+
+                    <div class="benefits__items">
+                        <ul class="benefits__list">
+                            <li class="benefits__list-item">
+                                мойка авто каждую неделю
+                            </li>
+                            <li class="benefits__list-item">
+                                премиум автомобили
+                            </li>
+                            <li class="benefits__list-item">
+                                мощный двигатель
+                            </li>
+                            <li class="benefits__list-item">
+                                поддержка 24/7
+                            </li>
+                            <li class="benefits__list-item">
+                                бензин за наш счет
+                            </li>
+                            <li class="benefits__list-item">
+                                парковка по всему городу
+                            </li>
+                            <li class="benefits__list-item">
+                                каждый месяц ТО автомобиля
+                            </li>
+                        </ul>
+
+                        <img class="benefits__img"
+                             src="images/Advantages.jpg"
+                             alt="Advantages">
+
+                        <div class="benefits__content">
+                            <p class="benefits__text">
+                                Вы можете выбрать один из 300 наших автомобилей, насладиться сервисом, повысить уровень
+                                жизни, не покупая дорогой
+                                автомобиль, успевать везде и каждый день ездить на новом премиум автомобиле.
+                            </p>
+                            <p class="benefits__text">
+                                Посмотрите видео презентацию нашего сервиса и выберите автомобиль уже сейчас!
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <!-- ------------- Section Advantages ------------- -->
+
         </main>
         <!-- --------------- Main --------------- -->
 
