Changes in the benefits section

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </section>
             <!-- ------------- Section Rent ------------- -->
 
-            <!-- ------------- Section Advantages ------------- -->
+            <!-- ------------- Section Benefits ------------- -->
             <section class="benefits">
                 <div class="benefits__container">
                     <h3 class="benefits__title">Преимущества</h3>
@@ -260,7 +260,7 @@
                         </ul>
 
                         <img class="benefits__img"
-                             src="images/Advantages.jpg"
+                             src="/images/main/Benefits.png"
                              alt="Advantages">
 
                         <div class="benefits__content">
@@ -272,12 +272,15 @@
                             <p class="benefits__text">
                                 Посмотрите видео презентацию нашего сервиса и выберите автомобиль уже сейчас!
                             </p>
+
+                            <a class="video-popup"
+                               href="#">Посмотреть презентацию</a>
                         </div>
                     </div>
 
                 </div>
             </section>
-            <!-- ------------- Section Advantages ------------- -->
+            <!-- ------------- Section Benefits ------------- -->
 
         </main>
         <!-- --------------- Main --------------- -->
