Added feedback slider

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Car Sharing</title>
 
     <link rel="stylesheet"
+          href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+    <link rel="stylesheet"
           href="css/style.css">
 </head>
 
@@ -107,7 +110,7 @@
                         </div>
                     </div>
                     <!-- -------- Content -------- -->
-                    <!-- -------- Slider -------- -->
+                    <!-- -------- Main Slider -------- -->
                     <div class="main__slider">
                         <div class="main__slider-container">
                             <div class="slides">
@@ -165,7 +168,7 @@
                         </div>
                     </div>
 
-                    <!-- -------- Slider -------- -->
+                    <!-- -------- Main Slider -------- -->
                 </div>
             </section>
             <!-- ------------- Main Section ------------- -->
@@ -274,13 +277,91 @@
                             </p>
 
                             <a class="video-popup"
-                               href="#">Посмотреть презентацию</a>
+                               href="#">Посмотреть<br>презентацию</a>
                         </div>
                     </div>
 
                 </div>
             </section>
             <!-- ------------- Section Benefits ------------- -->
+
+            <!-- ------------- Section Reviews ------------- -->
+            <section class="reviews">
+                <div class="reviews__container">
+                    <h3 class="reviews__title">Отзывы</h3>
+
+                    <!-- --------  Reviews Slider -------- -->
+                    <div class="reviews__slider content">
+                        <div class="reviews__container swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">Михаил, 28 лет</p>
+                                    <p class="reviews-item__text">Очень рад, что Вы есть! Пока еще бэху купить не могу,
+                                        но покататься взять
+                                        - это отличная возможность! Такое ощущение, что у меня личный огромный автопарк
+                                        элитных тачек)))</p>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">Инна, 35 лет</p>
+                                    <p class="reviews-item__text">Очень радует Ваш сервис. Встречаю ВИП клиентов всегда
+                                        только на Ваших машинах.
+                                        Удобно, что расчет по минутам, это экономит бюджет компании.</p>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">
+                                        Игорь, 25 лет</p>
+                                    <p class="reviews-item__text">
+                                        Ребята, Вы ТОПЧИК!
+                                        Брал машину на свидание, покатал девушку, она в восторге, я доволен, все
+                                        счастливы)
+                                    </p>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">
+                                        Марина, 30 лет
+                                    </p>
+                                    <p class="reviews-item__text">Люблю Ваш сервис. Не люблю такси. В приложении быстро
+                                        нахожу машину поблизости. Всегда чистая, свежая, приятно садиться
+                                        в нее. До работы или на шопинг еду с комфортом.
+                                    </p>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">Михаил, 28 лет</p>
+                                    <p class="reviews-item__text">Очень рад, что Вы есть! Пока еще бэху купить не могу,
+                                        но покататься взять
+                                        - это отличная возможность! Такое ощущение, что у меня личный огромный автопарк
+                                        элитных тачек)))</p>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">Михаил, 28 лет</p>
+                                    <p class="reviews-item__text">Очень рад, что Вы есть! Пока еще бэху купить не могу,
+                                        но покататься взять
+                                        - это отличная возможность! Такое ощущение, что у меня личный огромный автопарк
+                                        элитных тачек)))</p>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <p class="reviews-item__title">Михаил, 28 лет</p>
+                                    <p class="reviews-item__text">Очень рад, что Вы есть! Пока еще бэху купить не могу,
+                                        но покататься взять
+                                        - это отличная возможность! Такое ощущение, что у меня личный огромный автопарк
+                                        элитных тачек)))</p>
+                                </div>
+                            </div>
+
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                    <!-- --------  Reviews Slider -------- -->
+
+                </div>
+            </section>
+            <!-- ------------- Section Reviews ------------- -->
 
         </main>
         <!-- --------------- Main --------------- -->
@@ -354,6 +435,8 @@
     </div>
 
     <script src="js/main.js"></script>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 
 </html>
