Added a form in the feedback section

--- a/index.html
+++ b/index.html
@@ -366,16 +366,28 @@
       <!-- ------------- Section Feedback ------------- -->
       <section class="feedback">
         <div class="feedback__container">
-          <div class="feedback__inner">
+          <div class="feedback__wrapper">
             <img class="feedback__images"
                  src="images/main/feedback__img.png"
                  alt="Form images">
 
             <form class="feedback__form">
-              <h3 class="feedback-form__title">
+              <h3 class="form__title">
                 Остались вопросы?</h3>
-              <input type="text">
-              <input type="phone">
+              <p class="form__text">
+                Мы перезвоним Вам и проконсультируем по любому вопросу
+              </p>
+
+              <input class="form__input"
+                     type="text"
+                     placeholder="Имя">
+              <input class="form__input"
+                     type="phone"
+                     placeholder="Телефон">
+
+              <button class="form__btn"
+                      type="submit">Оставить заявку</button>
+
             </form>
           </div>
         </div>
