Adaptive has been added

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <!-- ------------- Section Rent ------------- -->
       <section class="rent">
         <div class="rent__container">
-          <div class="rent__inner">
+          <div class="rent_inner">
             <div class="rent__content">
               <h3 class="rent__title">
                 Условия аренды автомобиля</h3>
