--- a/index.html
+++ b/index.html
@@ -27,31 +27,38 @@
           </a>
           <!-- ------------- Navigation ------------- -->
           <nav class="menu">
+            <div class="menu__icon"
+                 onclick="menuList(this)">
+              <div class="bar bar1"></div>
+              <div class="bar bar2"></div>
+              <div class="bar bar3"></div>
+            </div>
+
             <ul class="menu__list">
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">О НАС
+                   href="#about">О НАС
                 </a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">АВТОПАРК</a>
+                   href="#fleet">АВТОПАРК</a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">ОТЗЫВЫ</a>
+                   href="#reviews">ОТЗЫВЫ</a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">КОНТАКТЫ</a>
+                   href="#contacts">КОНТАКТЫ</a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">УСЛОВИЯ</a>
+                   href="#terms">УСЛОВИЯ</a>
               </li>
             </ul>
           </nav>
@@ -157,7 +164,14 @@
                 </div>
               </div>
 
-              <div class="pagination"></div>
+              <<ul class="pagination">
+                <li class="dot"></li>
+                <li class="dot"></li>
+                <li class="dot"></li>
+                <li class="dot"></li>
+                <li class="dot"></li>
+                <li class="dot"></li>
+                </ul>
             </div>
 
             <div class="copy__items">
@@ -166,15 +180,16 @@
               <a class="copy__link"
                  href="#">Публичный договор</a>
             </div>
-          </div>
 
+          </div>
           <!-- -------- Main Slider -------- -->
         </div>
       </section>
       <!-- ------------- Main Section ------------- -->
 
       <!-- ------------- Section Rent ------------- -->
-      <section class="rent">
+      <section id="terms"
+               class="rent">
         <div class="rent__container">
           <div class="rent_inner">
             <div class="rent__content">
@@ -233,7 +248,8 @@
       <!-- ------------- Section Rent ------------- -->
 
       <!-- ------------- Section Benefits ------------- -->
-      <section class="benefits">
+      <section id="about"
+               class="benefits">
         <div class="benefits__container">
           <h3 class="benefits__title">Преимущества</h3>
 
@@ -286,7 +302,8 @@
       <!-- ------------- Section Benefits ------------- -->
 
       <!-- ------------- Section Reviews ------------- -->
-      <section class="reviews">
+      <section id="reviews"
+               class="reviews">
         <div class="reviews__container">
           <h3 class="reviews__title">Отзывы</h3>
 
@@ -364,7 +381,8 @@
       <!-- ------------- Section Reviews ------------- -->
 
       <!-- ------------- Section Feedback ------------- -->
-      <section class="feedback">
+      <section id="contacts"
+               class="feedback">
         <div class="feedback__container">
           <div class="feedback__wrapper">
             <img class="feedback__images"
@@ -405,31 +423,31 @@
              href="#">Скачать приложение</a>
           <!-- ------------- Navigation ------------- -->
           <nav class="menu">
-            <ul class="menu__list">
+            <ul class="footer__menu-list">
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">О НАС
+                   href="#about">О НАС
                 </a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">АВТОПАРК</a>
+                   href="#fleet">АВТОПАРК</a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">ОТЗЫВЫ</a>
+                   href="#reviews">ОТЗЫВЫ</a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">КОНТАКТЫ</a>
+                   href="#contacts">КОНТАКТЫ</a>
               </li>
 
               <li class="menu__item">
                 <a class="menu__list-link"
-                   href="#">УСЛОВИЯ</a>
+                   href="#terms">УСЛОВИЯ</a>
               </li>
             </ul>
           </nav>
