--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
           </a>
           <!-- ------------- Navigation ------------- -->
           <nav class="menu">
-            <div class="menu__icon"
-                 onclick="menuList(this)">
-              <div class="bar bar1"></div>
-              <div class="bar bar2"></div>
-              <div class="bar bar3"></div>
-            </div>
+            <button class="menu__btn"></button>
 
             <ul class="menu__list">
               <li class="menu__item">
@@ -452,7 +447,7 @@
             </ul>
           </nav>
           <!-- ------------- Navigation ------------- -->
-          <a class="phone"
+          <a class="footer__phone"
              href="tel:+38 (099) 999 90 90">
             +38 (099) 999 90 90
           </a>
