Added changes in index.html

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                 Мобильный телефон и интернет
               </p>
               <p class="rent__item-text">
-                Для использования нашего сервиса Вам необходим мобильный телефон и
-                интернет.Бронирование, оплата и вся отчетность происходит онлайн
+                Для использования нашего сервиса Вам необходим мобильный телефон и интернет.Бронирование, оплата и вся
+                отчетность происходит онлайн
               </p>
             </div>
 
