--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </ul>
 
             <img class="benefits__img"
-                 src="/images/main/benefits.png"
+                 src="./images/main/benefits.png"
                  alt="Advantages">
 
             <div class="benefits__content">
